stickiness-demo/helloworld-dest-with-queryparamname-stickiness.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld
spec:
  host: helloworld
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpQueryParameterName: testQueryName
  subsets:
  - name: all-helloworld-service-pods
    labels:
      app: helloworld
